--- a/index.html
+++ b/index.html
@@ -71,9 +71,15 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p style="font-family:'Courier New'">welcome to our group's fastpages for trimester 2</p>
+        <div class="home"><p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
 
-<h1 id="blogs">BLogs</h1>
+<p><img src="/trimester2group/images/diagram.png" alt="" title="https://github.com/fastai/fastpages" /></p>
+
+<p><a href="https://github.com/fastai/fastpages">fastpages</a> automates the process of creating blog posts via GitHub Actions, so you don’t have to fuss with conversion scripts.  A full list of features can be found on <a href="https://github.com/fastai/fastpages">GitHub</a>.</p>
+
+<p>You can edit the <code class="language-plaintext highlighter-rouge">index.html</code> file to change this content.</p>
+
+<h1 id="posts">Posts</h1>
 
 
 
