--- a/index.html
+++ b/index.html
@@ -7,4 +7,4 @@ image: images/logo.png
 <p style="font-family:'Courier New'">welcome to our group's fastpages for trimester 2</p>
 
 
-# BLogs
+# Blogs
