deploy: 742a217e6a47f39e29b1bf5d538a80226ae7de46

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ window.onload = wrap_img;
       <div class="wrapper">
         <div class="home"><p style="font-family:'Courier New'">welcome to our group's fastpages for trimester 2</p>
 
-<h1 id="blogs">BLogs</h1>
+<h1 id="blogs">Blogs</h1>
 
 
 
