--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@ image: images/logo.png
 ---
 
 <p style="font-family:'Courier New'">welcome to our group's fastpages for trimester 2</p>
-
+<img src="https://github.com/haeryny/trimester2group/blob/master/images/Ancient%20Times.gif?raw=true" width="2500" height="500" />
 
 # Blogs
