deploy: 3323271ff0334e8e542a7f8b08afb16e1319e017

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ window.onload = wrap_img;
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
         <div class="home"><p style="font-family:'Courier New'">welcome to our group's fastpages for trimester 2</p>
+<p><img src="https://github.com/haeryny/trimester2group/blob/master/images/Ancient%20Times.gif?raw=true" width="2500" height="500" /></p>
 
 <h1 id="blogs">Blogs</h1>
 
